[tool.poetry]
name = "impressive_strawberry"
version = "0.1.0"
description = "Achievements-as-a-service"
authors = ["Stefano Pigozzi <me@steffo.eu>", "Lorenzo Balugani <lorenzo.balugani@gmail.com>"]
license = "AGPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.70.0"
SQLAlchemy = "^1.4.26"
alembic = "^1.7.4"
psycopg2-binary = "^2.9.1"
python-dotenv = "^0.19.1"
uvicorn = "^0.15.0"
lazy-object-proxy = "^1.6.0"
httpx = "^0.21.1"
pytest-cov = "^3.0.0"

[tool.poetry.dev-dependencies]
Sphinx = "^4.2.0"
sphinx-rtd-theme = "^1.0.0"
sphinx-autobuild = "^2021.3.14"
pytest = "^6.2.5"
pytest-asyncio = "^0.16.0"
pytest-dotenv = "^0.5.2"
pytest-mock = "^3.6.1"
pytest-github-actions-annotate-failures = "^0.1.6"

[tool.pytest.ini_options]
env_override_existing_values = 1
env_files = [
    ".env",
    ".env.testing",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
