[project]
name = "impressive_strawberry"
version = "0.4.4"
description = "Achievements-as-a-service"
authors = [
	{ name = "Stefano Pigozzi", email = "me@steffo.eu" },
	{ name = "Lorenzo Balugani", email = "lorenzo.balugani@gmail.com" },
]
maintainers = []
license = "AGPL-3.0-or-later"
readme = "README.md"
keywords = ["achievements", "fastapi", "backend", "strawberry", "webapi"]

classifiers = [
    "Development Status :: 7 - Inactive",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Framework :: FastAPI",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Other Audience",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Topic :: Games/Entertainment",
    "Topic :: Internet",
    "Typing :: Typed",
]

requires-python = ">=3.11,<4.0"
dependencies = [
	"fastapi (>=0.70,<0.71)",
	"SQLAlchemy (>=1.4.26,<2)",
	"alembic (>=1.7.4,<2)",
	"psycopg2-binary (>=2.9.1,<3)",
	"python-dotenv (>=0.19.1,<0.20)",
	"uvicorn (>=0.15,<0.16)",
	"lazy-object-proxy (>=1.6.0,<2)",
	"httpx (>=0.21.1,<0.24.0)",
	"setuptools (>=65.6.3,<66)",
	"coloredlogs (>=15.0.1,<16)",
]


[project.urls]
Homepage = "https://strawberry.ryg.one/"
Repository = "https://github.com/RYGhub/impressive-strawberry/"
Issues = "https://github.com/RYGhub/impressive-strawberry/issues"


[dependency-groups]
dev = [
	"Sphinx (>=4.2.0,<5)",
	"sphinx-rtd-theme (>=1.0.0,<2)",
	"sphinx-autobuild (>=2021.3.14)",
	"pytest (>=6.2.5,<7)",
	"pytest-asyncio (>=0.16.0,<0.17)",
	"pytest-dotenv (>=0.5.2,<0.6)",
	"pytest-mock (>=3.6.1,<4)",
	"pytest-github-actions-annotate-failures (>=0.1.6,<0.2)",
	"pylint (>=2.15.5,<3)",
]


[tool.pytest.ini_options]
env_override_existing_values = 1
env_files = [
    ".env",
    ".env.testing",
]
